to pull origin master

--- a/translate_project/speedgame/templates/speedgame/room.html
+++ b/translate_project/speedgame/templates/speedgame/room.html
@@ -11,7 +11,7 @@
         const roomName = JSON.parse(document.getElementById('room-name').textContent);
 
         const speedgameSocket = new WebSocket(
-            'ws://'+ window.location.host + '/ws/speedgame/'+ roomName + '/');
+            `ws://`+ window.location.host + `/ws/speedgame/`);
 
         speedgameSocket.onmessage = function(e) {
             const data = JSON.parse(e.data);
